@@ -1,3 +1,11 @@
+2010-03-08  Thomas Adam <thomas@xteddy.org>
+	
+	* fvwm-cats/index.php:
+	* fvwm-cats/mildred.jpg:
+	* fvwm-cats/mildred.php:
+	* fvwm-cats/small_mildred.jpg:
+	Add in photo of Mildred.
+
 2010-02-19    <despen@verizon.net>
 
 	* authors/pictures/Dan_Espen.php: Fix link to personal web page.
